[gd_scene load_steps=8 format=2]

[ext_resource path="res://Resources/default_theme.tres" type="Theme" id=1]
[ext_resource path="res://Scripts/ScienceUI.gd" type="Script" id=2]
[ext_resource path="res://Graphics/Icons/OtherBranches.png" type="Texture" id=3]
[ext_resource path="res://Graphics/Icons/InfiniteResearch.png" type="Texture" id=4]
[ext_resource path="res://Graphics/Icons/MainBranch.png" type="Texture" id=5]

[sub_resource type="InputEventAction" id=1]
action = "Z"

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Back" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -36.0
margin_right = 112.0
shortcut_in_tooltip = false
shortcut = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -68.0
margin_right = 52.0
margin_bottom = 72.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainBranch" type="Button" parent="Panel"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 8.0
margin_top = -62.0
margin_right = 44.0
margin_bottom = -26.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Panel/MainBranch"]
modulate = Color( 0, 1, 0, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OtherBranches" type="Button" parent="Panel"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 8.0
margin_top = -18.0
margin_right = 44.0
margin_bottom = 18.0

[node name="TextureRect" type="TextureRect" parent="Panel/OtherBranches"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 3 )

[node name="InfiniteResearch" type="Button" parent="Panel"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 8.0
margin_top = 26.0
margin_right = 44.0
margin_bottom = 62.0

[node name="TextureRect" type="TextureRect" parent="Panel/InfiniteResearch"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
[connection signal="mouse_entered" from="Panel/MainBranch" to="." method="_on_MainBranch_mouse_entered"]
[connection signal="mouse_exited" from="Panel/MainBranch" to="." method="_on_mouse_exited"]
[connection signal="pressed" from="Panel/MainBranch" to="." method="_on_MainBranch_pressed"]
[connection signal="mouse_entered" from="Panel/OtherBranches" to="." method="_on_OtherBranches_mouse_entered"]
[connection signal="mouse_exited" from="Panel/OtherBranches" to="." method="_on_mouse_exited"]
[connection signal="pressed" from="Panel/OtherBranches" to="." method="_on_OtherBranches_pressed"]
[connection signal="mouse_entered" from="Panel/InfiniteResearch" to="." method="_on_InfiniteResearch_mouse_entered"]
[connection signal="mouse_exited" from="Panel/InfiniteResearch" to="." method="_on_mouse_exited"]
[connection signal="pressed" from="Panel/InfiniteResearch" to="." method="_on_InfiniteResearch_pressed"]
